# tropical

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/: client.hpp  config.hpp  message.hpp  mpsc_queue.hpp  net.hpp  peer.hpp  prog_info.hpp  spdlog_config.hpp  spsc_queue.hpp  ui.hpp
include/util/: brief_int.hpp  errno_ec.hpp  event_fd.hpp  lines.hpp  match.hpp  mpsc_queue.hpp  socket.hpp  spsc_queue.hpp  strerror_mt.hpp  term_style.hpp  todo.hpp  uninit.hpp  variant_idx.hpp
src/: client.cpp  config.cpp  main.cpp  message.cpp  mpsc_queue.cpp  net.cpp  spsc_queue.cpp  ui.cpp
src/util/: errno_ec.cpp  event_fd.cpp  lines.cpp  socket.cpp  strerror_mt.cpp  todo.cpp
